Fix header covering content

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -54,9 +54,11 @@ input:focus {
 }
 
 .container {
+  position: relative;
+  width: 100%;
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: 127px auto auto auto;
   grid-template-areas:
     "h h h h h h h h h h h h"
     "mc mc mc mc mc mc mc mc mc mc mc mc"
@@ -69,6 +71,7 @@ input:focus {
 
   .main-content {
     grid-area: mc;
+    grid-row-start: 2;
   }
 
   .blog-subscribe {
@@ -79,7 +82,6 @@ input:focus {
     grid-area: f;
   }
 }
-
 
 
 /* 48em = 768px */
